# cs281-project

./: .gitignore  GEPA_README.md  README.md  SETUP.md  interactions_test.jsonl  interactions_test.txt  milestone_report.md  poster_report_reference.md  pyproject.toml  run_adversarial.sh  run_benchmark.sh  run_rejudge.sh
data/: profiles_test.jsonl
mindeval/: inference.py  judge_prompts.py  prompts.py  utils.py
mindeval/scripts/: generate_adversarial_interactions.py  generate_adversarial_profiles.py  generate_interactions.py  generate_judgments.py  test_adversarial.py
pipeline/: config.py  data_prep.py  main.py  metric.py  regression.py  simulate.py  utils.py
pipeline/tests/: smoke.py
prompt_opt_pipeline/: config.py  data_prep.py  evaluate.py  main.py  metric.py  regression.py  simulate.py  utils.py
prompt_opt_pipeline/outputs/: evaluation_results.json  optimization_scores.json  run_log.txt  seed_prompt.txt
prompt_opt_pipeline/tests/: integration.py  smoke.py
results/adversarial/: dependency.txt  emotional_escalation.txt  pushback.txt  scores_validation_seeking.txt  validation_seeking.txt
results/adversarial_gpt4o_clinician/: dependency.jsonl  emotional_escalation.txt  pushback.jsonl
results/adversarial_gpt4omini_clinician_v0_1_judge/: emotional_escalation.jsonl  judgments_dependency.jsonl  judgments_emotional_escalation.jsonl  judgments_validation_seeking.jsonl  scores_pushback.txt  validation_seeking.jsonl
results/adversarial_gpt4omini_clinician_v0_2_judge/: judgments_dependency.jsonl  judgments_pushback.jsonl  judgments_validation_seeking.jsonl  (+1 more)
(+73 files in other folders)
