[tool.poetry]
name = "mindeval"
version = "0.1.0"
description = "MindEval"
authors = [
    "José Pombal <j.pombal@swordhealth.com>"
    ]
maintainers = [
    "José Pombal <j.pombal@swordhealth.com>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
jupyter = "^1.1.1"
jsonargparse = "^4.34.1"
tenacity = "^9.0.0"
openai = "^1.0.0"
pandas = "^2.3.1"
datasets = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"